# src/main/java/com/tb/javaecommerce/web/CategoryController.java
@@ -6,6 +6,7 @@ import com.tb.javaecommerce.service.CategoryService;
 import com.tb.javaecommerce.service.mappers.CategoryMapper;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
@@ -34,16 +35,19 @@ public class CategoryController {
     }
 
     @PostMapping
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<CategoryDto> createCategory(@RequestBody @Valid CategoryDto categoryDto) {
         return ResponseEntity.ok(categoryMapper.categoryToCategoryDto(categoryService.createCategory(categoryDto)));
     }
 
     @PutMapping("/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<CategoryDto> updateCategory(@RequestBody @Valid CategoryDto categoryDto, @PathVariable Long id) {
         return ResponseEntity.ok(categoryMapper.categoryToCategoryDto(categoryService.updateCategory(categoryDto, id)));
     }
 
     @DeleteMapping("/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
     public void deleteCategory(@PathVariable Long id) {
         categoryService.deleteCategory(id);
     }
