# src/main/resources/api-specs/product-api-spec.yml
@@ -8,6 +8,8 @@ paths:
   /api/v1/products:
     get:
       summary: Get all products
+      security:
+        - BearerAuth: [ ]
       tags:
         - Products
       responses:
@@ -19,6 +21,9 @@ paths:
                 $ref: '#/components/schemas/ProductResponseDtoList'
     post:
       summary: Create a new product
+      security:
+        - BearerAuth: [ ]
+      description: Requires `ADMIN` role.
       tags:
         - Products
       requestBody:
@@ -45,6 +50,9 @@ paths:
                 $ref: '#/components/schemas/ValidationError'
     put:
       summary: Update a product
+      security:
+        - BearerAuth: [ ]
+      description: Requires `ADMIN` role.
       tags:
         - Products
       parameters:
@@ -82,6 +90,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
     delete:
+      security:
+        - BearerAuth: [ ]
+      description: Requires `ADMIN` role.
       summary: Delete a product
       tags:
         - Products
@@ -107,6 +118,8 @@ paths:
       summary: Get product by ID
       tags:
         - Products
+      security:
+        - BearerAuth: [ ]
       parameters:
         - in: path
           name: id
@@ -133,6 +146,8 @@ paths:
       summary: filter Products by price
       tags:
         - Products
+      security:
+        - BearerAuth: [ ]
       parameters:
         - in: query
           name: minPrice
@@ -167,6 +182,8 @@ paths:
       summary: search Products by title
       tags:
         - Products
+      security:
+        - BearerAuth: [ ]
       parameters:
         - in: query
           name: title
@@ -191,6 +208,11 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
 
 components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     ErrorResponse:
       type: object
